--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "rollup-plugin-html-insert",
-  "version": "1.0.1",
+  "version": "1.0.3",
   "description": "rollup plugin to edit html template",
   "type": "module",
+  "author": "wenjayliu <mr_wenjie@outlook.com>",
+  "homepage": "https://github.com/wenjayliu/rollup-plugin-html-insert",
+  "bugs": "https://github.com/wenjayliu/rollup-plugin-html-insert/issues",
   "main": "./dist/es/index.js",
   "module": "./dist/es/index.js",
   "cjs": "./dist/cjs/index.js",
@@ -19,7 +22,6 @@
     "html",
     "template"
   ],
-  "author": "mr_wenjie@outlook.com",
   "license": "ISC",
   "devDependencies": {
     "@rollup/plugin-typescript": "^10.0.1",
