--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rollup-plugin-html-insert",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "rollup plugin to edit html template",
   "type": "module",
   "author": "wenjayliu <mr_wenjie@outlook.com>",
@@ -21,6 +21,13 @@
     "plugin",
     "html",
     "template"
+  ],
+  "files": [
+    "dist",
+    "!dist/**/*.map",
+    "types",
+    "README.md",
+    "LICENSE"
   ],
   "license": "ISC",
   "devDependencies": {
