--- a/example/vue3-template/package.json
+++ b/example/vue3-template/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "serve": "cross-env NODE_ENV=development rollup -cw",
     "dev": "rollup -c -w",
     "build": "rollup -c",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,24 +16,35 @@
   "author": "wenjie",
   "license": "ISC",
   "devDependencies": {
-    "@rollup/plugin-typescript": "^10.0.1",
-    "@types/node": "^18.11.18",
-    "@typescript-eslint/parser": "^5.48.0",
+    "@rollup/plugin-alias": "^4.0.2",
     "@rollup/plugin-commonjs": "^24.0.0",
     "@rollup/plugin-html": "^1.0.1",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-terser": "^0.2.1",
+    "@rollup/plugin-typescript": "^10.0.1",
     "@types/html-minifier": "^4.0.2",
+    "@types/node": "^18.11.18",
+    "@typescript-eslint/parser": "^5.48.0",
+    "@vue/compiler-sfc": "^3.2.45",
+    "@vue/runtime-dom": "^3.2.45",
+    "cross-env": "^7.0.3",
     "eslint": "^8.31.0",
+    "postcss": "^8.4.20",
+    "rollup": "^3.9.1",
     "rollup-plugin-cleanup-dir": "^1.0.7",
     "rollup-plugin-css-only": "^4.3.0",
     "rollup-plugin-dev": "^2.0.4",
-    "rollup-plugin-html-insert": "^1.0.2",
+    "rollup-plugin-html-insert": "^1.0.5",
     "rollup-plugin-livereload": "^2.0.5",
-    "rollup": "^3.9.1",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-serve": "^2.0.2",
+    "rollup-plugin-typescript2": "^0.34.1",
+    "rollup-plugin-vue": "^6.0.0",
+    "tslib": "^2.4.1",
     "typescript": "^4.9.4"
   },
   "dependencies": {
-    "vkk-utils": "^1.0.6"
+    "vkk-utils": "^1.0.6",
+    "vue": "^3.2.45"
   }
 }
