--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -3,7 +3,7 @@
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "lib": ["es2019"],
-    "module": "commonjs",
+    "module": "ES2020",
     "moduleResolution": "node",
     "noEmit": true,
     "noEmitOnError": false,
