--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-config-rollup": "^3.0.1",
     "node-html-parser": "^6.1.4",
     "rollup": "^3.9.1",
+    "rollup-plugin-typescript2": "^0.34.1",
     "typescript": "^4.9.4"
   },
   "ava": {
